--- a/src/jobs/on-hold.yml
+++ b/src/jobs/on-hold.yml
@@ -32,8 +32,8 @@ parameters:
         Select which channel in which to post to. Channel name or ID will work. You may include a comma separated list of channels if you wish to post to multiple channels at once. Set the "SLACK_DEFAULT_CHANNEL" environment variable for the default channel.
       type: string
       default: $SLACK_DEFAULT_CHANNEL
-
-docker:
+# 
+docker:143ecaa2f413aa4d4a6e8e6ad21bb9f60beb3217
   - image: cimg/base:stable
 resource_class: small
 
